--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nuxt3-select2": "^0.1.29",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.6",
-    "vue": "^3.4.21",
+    "vue": "latest",
     "vue-router": "^4.3.0",
     "vuefire": "^3.1.23"
   },
@@ -33,8 +33,5 @@
     "nuxt3-leaflet": "^1.0.12",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.5.16"
-  },
-  "overrides": {
-    "vue": "latest"
   }
 }
